Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1143

avrogencpp generates $Undefined$ for some union types

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.7.1
    • 1.7.2
    • c++
    • None

    Description

      When converting the attached file to a C++ header, a vector of type $Undefined$ is generated. I believe this is because there is no check for AVRO_UNION in CodeGen::cppTypeOf().

      Attachments

        1. gm_avro_graph.avpr
          1 kB
          jvdl
        2. AVRO-1143.patch
          1 kB
          Thiruvalluvan M. G.

        Activity

          People

            thiru_mg Thiruvalluvan M. G.
            janlugt jvdl
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: