AVRO-1143. avrogencpp generates $Undefined$ for some union types

git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1382397 13f79535-47bb-0310-9956-ffa450edef68